--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ dash-core-components==0.18.1
 dash-html-components==0.8.0
 dash-renderer==0.11.2
 decorator==4.2.1
-Flask==0.12.2
+flask>=0.12.3
 Flask-Compress==1.4.0
 gdax==1.0.6
 idna==2.6
