--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ pytz==2017.3
 requests>=2.20.0
 six==1.10.0
 traitlets==4.3.2
-urllib3==1.22
+urllib3>=1.23
 websocket-client==0.40.0
 Werkzeug==0.14.1
 
