--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,6 @@ sortedcontainers==2.1.0
 traitlets==4.3.2
 urllib3==1.24.2
 websocket-client==0.40.0
-Werkzeug==0.15.2
+werkzeug>=0.15.3
 zope.interface==4.6.0
 colorama==0.3.9
